# Genetic-Evolution-Tournament

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .secrets.baseline  404.html  CNAME  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  _typos.toml  acknowledgements.html  dedication.html  index.html  labels.toml  overview.html  pyproject.toml  search.json  styles.css
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: blank.md  general_issue.md
.github/workflows/: pre-commit.yaml  publish.yaml
analysis/google_scholar/: gs.py
analysis/google_trends/: gt.py
announcements/: lw_and_eaf.html  other.html
appendix/: FAQ.html  additional_remarks.html  glossary.html  trends.html
assets/literature/: literature.qmd
assets/meetings/: check-ins.md  check_ins.md
assets/misc/: full-questions.md  historical-edits.md  notes-for-other-tournaments.md  notes.md  notes.qmd  overview-of-techniques.md  question-template.txt  repo-notes.md  (+1 more)
front_matter/: about.html  administration.html  contact.html  external_considerations.html  feedback.html  goals.html  hosting.html  scoring.html  structure.html
q_ADS/: introduction.html
q_ELSI/: introduction.html  q_ELSI_01.html  q_ELSI_02.html  q_ELSI_03.html  q_ELSI_04.html  q_ELSI_05.html  q_ELSI_06.html  q_ELSI_07.html  q_ELSI_08.html  q_ELSI_09.html  q_ELSI_10.html
q_HISE/: introduction.html
question_group_01/: introduction.html  question_g01_01.html
resources/: articles.html  books.html  glossary.html  lw_and_eaf_posts.html  wiki.html
website/: 404.qmd  _quarto.yml  acknowledgements.qmd  acknowledgments.qmd  aggregated_questions.qmd  dark-style.scss  dedication.qmd  index.qmd  light-style.scss  overview.qmd  references.bib  styles.css
(+105 files in other folders)
